[package]
name = "tonneli-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Terminal UI for browsing municipal waste collection schedules with Tonneli."

[dependencies]
tonneli-core = { workspace = true }
tonneli-provider-aachen = { workspace = true }
tonneli-provider-cologne = { workspace = true }
tonneli-provider-nuremberg = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

[lints]
workspace = true
